# yonyou_doc2skill

./: .env.example  .gitignore  .mcp.json  AGENTS.md  BULLETPROOF_QUICKSTART.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.mcp  README.md  README.zh-CN.md  TROUBLESHOOTING.md  docker-compose.yml  example-mcp-config.json  pyproject.toml  render-mcp.yaml  render.yaml  setup.sh  setup_mcp.sh  tmp_gfwiki_22539572.html
.codex-plugin/: plugin.json
.github/: create_issues.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-publish.yml  quality-metrics.yml  release.yml  scheduled-updates.yml  test-vector-dbs.yml  tests.yml  vector-db-export.yml
api/: README.md  __init__.py  config_analyzer.py  main.py
configs/: astrovalley_unified.json  claude-code-unified.json  claude-code.json
distribution/claude-plugin/: .mcp.json  README.md
distribution/claude-plugin/.claude-plugin/: plugin.json
distribution/claude-plugin/commands/: create-skill.md  install-skill.md  sync-config.md
distribution/github-action/: README.md  action.yml
distribution/smithery/: README.md
docs/: ARCHITECTURE.md  BEST_PRACTICES.md  DOCKER_DEPLOYMENT.md  DOCKER_GUIDE.md  FAQ.md  KUBERNETES_DEPLOYMENT.md  KUBERNETES_GUIDE.md  PRODUCTION_DEPLOYMENT.md  README.md  TROUBLESHOOTING.md  UML_ARCHITECTURE.md  VIDEO_GUIDE.md  competition-entry-form-delivery.zh-CN.md  competition-entry-form.zh-CN.md  skill-runtime-dependency-matrix.zh-CN.md  supported-sources-and-principles.zh-CN.md  yonyou-doc2skill-overview.zh-CN.md  yonyou-doc2skill-pitch-short.zh-CN.md  yonyou-knowledge-delivery-boost-overview.zh-CN.md  yonyou-knowledge-delivery-boost-pitch-short.zh-CN.md
docs/UML/: skill_seekers.mdj
docs/advanced/: custom-workflows.md  mcp-server.md  multi-source.md
docs/agents/plans/: 2026-03-14-epub-input-support.md
docs/agents/research/: 2026-03-14-epub-input-support-affected-files.md
docs/blog/: UNIVERSAL_RAG_PREPROCESSOR.md
docs/case-studies/: deepwiki-open.md
docs/features/: BOOTSTRAP_SKILL.md  BOOTSTRAP_SKILL_TECHNICAL.md  ENHANCEMENT.md  ENHANCEMENT_MODES.md  HOW_TO_GUIDES.md  PATTERN_DETECTION.md  TEST_EXAMPLE_EXTRACTION.md  UNIFIED_SCRAPING.md
docs/getting-started/: 01-installation.md  02-quick-start.md  04-next-steps.md
docs/guides/: HTTP_TRANSPORT.md  MCP_SETUP.md  MIGRATION_GUIDE.md  MULTI_AGENT_SETUP.md  SETUP_QUICK_REFERENCE.md  TESTING_GUIDE.md  UPLOAD_GUIDE.md
docs/integrations/: CHROMA.md  CLINE.md  CONTINUE_DEV.md  CURSOR.md  FAISS.md  GEMINI_INTEGRATION.md  HAYSTACK.md  INTEGRATIONS.md  LANGCHAIN.md  LLAMA_INDEX.md  MINIMAX_INTEGRATION.md  MULTI_LLM_SUPPORT.md  OPENAI_INTEGRATION.md  PINECONE.md  QDRANT.md  RAG_PIPELINES.md  WEAVIATE.md  WINDSURF.md
docs/reference/: API_REFERENCE.md  C3_x_Router_Architecture.md  CLI_REFERENCE.md  CODE_QUALITY.md  CONFIG_FORMAT.md  FEATURE_MATRIX.md  GIT_CONFIG_SOURCES.md  LLMS_TXT_SUPPORT.md  MCP_REFERENCE.md  SKILL_ARCHITECTURE.md
docs/user-guide/: 01-core-concepts.md  02-scraping.md  03-enhancement.md  04-packaging.md  05-workflows.md
docs/zh-CN/: ARCHITECTURE.md  README.md
examples/: http_transport_examples.sh  test_http_server.py
examples/chroma-example/: 1_generate_skill.py  2_upload_to_chroma.py  README.md  requirements.txt
examples/cline-django-assistant/: README.md  generate_clinerules.py  requirements.txt
examples/continue-dev-universal/: README.md  context_server.py  quickstart.py  requirements.txt
examples/cursor-react-skill/: README.md  generate_cursorrules.py  requirements.txt
examples/faiss-example/: 1_generate_skill.py  requirements.txt
examples/haystack-pipeline/: README.md  quickstart.py
examples/langchain-rag-pipeline/: README.md  quickstart.py
examples/llama-index-query-engine/: README.md  quickstart.py
examples/pinecone-upsert/: README.md  quickstart.py
examples/qdrant-example/: 1_generate_skill.py  requirements.txt
examples/weaviate-example/: 1_generate_skill.py  README.md  requirements.txt
examples/windsurf-fastapi-context/: README.md  generate_windsurfrules.py  requirements.txt
helm/yonyou-doc2skill/: Chart.yaml  values.yaml
scripts/: bootstrap_skill.sh  check_translation_sync.sh  run_benchmarks.sh  run_integration_tests.sh  skill_header.md  translate_doc.py
skills/yonyou-doc2skill/: SKILL.md  package.json  requirements.txt
skills/yonyou-knowledge-delivery-boost/: SKILL.md  package.json
src/yonyou_doc2skill/: _version.py
templates/github-actions/: update-skills.yml
tests/: conftest.py  docker-compose.test.yml  mcp_integration_test.md  test_adaptor_benchmarks.py  test_agent_client.py  test_api_reference_builder.py  test_architecture_scenarios.py  test_async_scraping.py  test_benchmark.py  test_bootstrap_skill.py  test_bootstrap_skill_e2e.py  test_browser_renderer.py  test_c3_integration.py  test_chunking_integration.py  test_cli_parsers.py  test_cli_paths.py  test_cli_refactor_e2e.py  test_cloud_storage.py  test_code_analyzer.py  test_codebase_scraper.py  test_config_extractor.py  test_config_fetcher.py  test_config_publisher.py  test_config_validation.py  test_confluence_scraper.py  test_constants.py  test_create_arguments.py  test_create_integration_basic.py  test_dependency_analyzer.py  test_doctor.py  test_e2e_three_stream_pipeline.py  test_embedded_skill_runtime.py  test_embedding.py  test_embedding_pipeline.py  test_enhance_command.py  test_enhance_prepare.py  test_enhance_skill_local.py  test_epub_scraper.py  test_estimate_pages.py  test_excluded_dirs_config.py  (+85 more)
tests/test_adaptors/: test_adaptors_e2e.py  test_base.py  test_chroma_adaptor.py  test_claude_adaptor.py  test_deepseek_adaptor.py  test_faiss_adaptor.py  test_fireworks_adaptor.py  test_gemini_adaptor.py  test_haystack_adaptor.py  test_kimi_adaptor.py  test_langchain_adaptor.py  test_llama_index_adaptor.py  test_markdown_adaptor.py  test_minimax_adaptor.py  test_openai_adaptor.py  test_openai_compatible_base.py  test_opencode_adaptor.py  test_openrouter_adaptor.py  test_qdrant_adaptor.py  test_qwen_adaptor.py  test_together_adaptor.py  test_weaviate_adaptor.py
(+381 files in other folders)
